add second task

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
         <h1 class="main__title">TechMagic Academy. Typescript Challenge. Task 1</h1>
         <div class="posts"></div>
     </main>
-    <script src="./task.js"></script>
+    <script src="./task1.js"></script>
 </body>
 </html>
